updated data in friends.js, added routes, required routing files in server.js

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,7 @@
         <hr class="my-4 text-center">
         <p class="text-center">Click the button below to get started with the quick 10 question survey.</p>
         <p class="lead text-center">
-            <a class="btn btn-info btn-lg" href="#" role="button">Get started now</a>
+            <a class="btn btn-info btn-lg" href="/survey" role="button">Get started now</a>
         </p>
     </div>
 
