--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,29 +21,162 @@
 
         <form>
             <div class="form-group">
-                <label for="yourName">Name</label>
+                <h5>Name</h5>
                 <input type="text" class="form-control" id="yourName" placeholder="Enter your name">
             </div>
             <div class="form-group">
-                <label for="yourImage">Photo</label>
+                <h5>Photo</h5>
                 <input type="text" class="form-control" id="yourImage" placeholder="Provide a link to a photo of you">
             </div>
             <div class="form-group">
                 <h5>Question 1: </h5>
                 <label for="question1">How much do you agree with the following statement? Peanut Butter is delicious.</label>
                 <select class="form-control" id="question1">
-                  <option>1 - Strongly Disagree</option>
-                  <option>2 - Disagree</option>
-                  <option>3 - Meh</option>
-                  <option>4 - Agree</option>
-                  <option>5 - Strongly Agree</option>
+                    <option>1 - Strongly Disagree</option>
+                    <option>2 - Disagree</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Agree</option>
+                    <option>5 - Strongly Agree</option>
                 </select>
-              </div>
+            </div>
 
+            <div class="form-group">
+                <h5>Question 2: </h5>
+                <label for="question2">How much do you like going out to the movies?</label>
+                <select class="form-control" id="question2">
+                    <option>1 - Strongly Dislike</option>
+                    <option>2 - Dislike</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Like</option>
+                    <option>5 - Strongly Like</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 3: </h5>
+                <label for="question3">How likely are you to go outside on weekends?</label>
+                <select class="form-control" id="question3">
+                    <option>1 - Definitely not likely</option>
+                    <option>2 - Not likely</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Likely</option>
+                    <option>5 - Definitely likely</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 4: </h5>
+                <label for="question4">How often do you travel for fun?</label>
+                <select class="form-control" id="question4">
+                    <option>1 - Never</option>
+                    <option>2 - Once per year</option>
+                    <option>3 - 2-4 times per year</option>
+                    <option>4 - Once per month</option>
+                    <option>5 - 2-4 times per month</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 5: </h5>
+                <label for="question5">How often do you go out to see a concert?</label>
+                <select class="form-control" id="question5">
+                    <option>1 - Never</option>
+                    <option>2 - Once per year</option>
+                    <option>3 - 2-4 times per year</option>
+                    <option>4 - Once per month</option>
+                    <option>5 - 2-4 times per month</option>
+                </select>
+            </div>
+
+
+            <div class="form-group">
+                <h5>Question 6: </h5>
+                <label for="question6">Once you've made plans with a friend, how often do you stay committed to those plans?</label>
+                <select class="form-control" id="question6">
+                    <option>1 - Almost Never</option>
+                    <option>2 - Occasionally</option>
+                    <option>3 - Sometimes</option>
+                    <option>4 - Frequently</option>
+                    <option>5 - Always</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 7: </h5>
+                <label for="question7">How much do you like dogs?</label>
+                <select class="form-control" id="question7">
+                    <option>1 - Not at all</option>
+                    <option>2 - I can tolerate them</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Dogs are cool</option>
+                    <option>5 - Dogs are the best ever</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 8: </h5>
+                <label for="question8">How much do you like cats?</label>
+                <select class="form-control" id="question8">
+                    <option>1 - Not at all</option>
+                    <option>2 - I can tolerate them</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Cats are cool</option>
+                    <option>5 - Cats are the best ever</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 9: </h5>
+                <label for="question9">How often do you go out for drinks?</label>
+                <select class="form-control" id="question9">
+                    <option>1 - Never</option>
+                    <option>2 - Once per year</option>
+                    <option>3 - Once per month</option>
+                    <option>4 - Once per week</option>
+                    <option>5 - Every day</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <h5>Question 10: </h5>
+                <label for="question10">You like being the center of attention.</label>
+                <select class="form-control" id="question10">
+                    <option>1 - Strongly Disagree</option>
+                    <option>2 - Disagree</option>
+                    <option>3 - Meh</option>
+                    <option>4 - Agree</option>
+                    <option>5 - Strongly Agree</option>
+                </select>
+            </div>
+
+            <!-- <button type="submit" class="btn btn-info">Submit</button>
+    </form>
+</div> -->
             <button type="submit" class="btn btn-info">Submit</button>
         </form>
     </div>
 
+    <script type="text/javascript">
+        $(".submit").on("click", function () {
+            var newFriendData = {
+                name: $("#yourName").val().trim(),
+                photo: $("#yourImage").val().trim(),
+                q1: $("#question1").val(),
+                q2: $("#question2").val(),
+                q3: $("#question3").val(),
+                q4: $("#question4").val(),
+                q5: $("#question5").val(),
+                q6: $("#question6").val(),
+                q7: $("#question7").val(),
+                q8: $("#question8").val(),
+                q9: $("#question9").val(),
+                q10: $("#question10").val(),
+            };
+            console.log(newFriendData);
+        });
+
+
+    </script>
 </body>
 
 </html>
