--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6-sm">
-                <a href="#">API Friend List</a>
+                <a href="/api/friends">API Friend List</a>
             </div>
         </div>
     </div>
