--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
- <!-- Survey questions -->
+    <!-- Survey questions -->
     <div class="container">
         <div class="row">
             <div class="col-6-sm">
@@ -158,35 +158,34 @@
     </div>
 
     <script type="text/javascript">
-    // get data entered from survey
+        // get data entered from survey
         $("#submitButton").on("click", function (event) {
             event.preventDefault();
             var newFriendData = {
                 name: $("#yourName").val().trim(),
                 photo: $("#yourImage").val().trim(),
-                q1: $("#question1").val(),
-                q2: $("#question2").val(),
-                q3: $("#question3").val(),
-                q4: $("#question4").val(),
-                q5: $("#question5").val(),
-                q6: $("#question6").val(),
-                q7: $("#question7").val(),
-                q8: $("#question8").val(),
-                q9: $("#question9").val(),
-                q10: $("#question10").val(),
+                scores: [
+                    parseInt($("#question1").val()),
+                    parseInt($("#question2").val()),
+                    parseInt($("#question3").val()),
+                    parseInt($("#question4").val()),
+                    parseInt($("#question5").val()),
+                    parseInt($("#question6").val()),
+                    parseInt($("#question7").val()),
+                    parseInt($("#question8").val()),
+                    parseInt($("#question9").val()),
+                    parseInt($("#question10").val())
+                ]
             };
-            // console.log(newFriendData);
-
             var currentURL = window.location.origin;
-            
-;
-            $.post(currentURL + "/api/new", newFriendData) 
-            .then(function(data) {
-                console.log(data);
-                $("#yourName").val("");
-                $("#yourImage").val("");
-                alert("added to friend list");
-            });
+            ;
+            $.post(currentURL + "/api/friends", newFriendData)
+                .then(function (data) {
+                    // console.log(data);
+                    $("#yourName").val("");
+                    $("#yourImage").val("");
+                    alert("added to friend list");
+                });
         });
 
 
